# ParaVT

./: .gitignore  .secrets.env.example  CITATION.cff  README.md  index.html  pyproject.toml
paravt/: README.md  __init__.py
paravt/data/: README.md  __init__.py  materialize.py
paravt/eval/: README.md  __init__.py  driver.py  utils.py
paravt/eval/configs/: notool.yaml  withtool.yaml
paravt/eval/scripts/: batch_reproduce_tab1.sh  reproduce_conan_7b.sh  reproduce_longvt_rft.sh  reproduce_paravt_8b.sh  reproduce_qwen25vl_7b.sh  reproduce_qwen3vl_8b.sh  reproduce_reasoning_baselines.sh  reproduce_sage_7b.sh  reproduce_videozoomer_7b.sh
paravt/rl/: README.md  __init__.py  actor.py  config.py  train.py  trainer.py  workflow.py
paravt/rl/areal/: setup.py
paravt/rl/areal/api/: cli_args.py  io_struct.py
paravt/rl/areal/core/: dist_rollout.py
paravt/rl/areal/engine/: fsdp_engine.py  vllm_remote.py
paravt/rl/areal/utils/: data.py  hf_utils.py  model.py  stats_logger.py  video.py
paravt/rl/configs/: _base.yaml  paragrpo_8b.yaml  vanilla_grpo_8b.yaml
paravt/rl/data/: __init__.py  dataset.py
paravt/rl/rewards/: __init__.py  compose.py  format.py  llm_judge.py  task_metrics.py  tool.py  utils.py
paravt/rl/subagents/: __init__.py  base.py  manager.py
paravt/rl/subagents/crop_video/: __init__.py  cropped_video.py
paravt/rl/utils/: __init__.py  tool_parser.py
paravt/sft/: README.md
paravt/sft/configs/: data_manifest.example.yaml  qwen3vl_8b.yaml
paravt/sft/lmms-engine/: PATCHES.md
paravt/sft/lmms-engine/src/lmms_engine/datasets/iterable/: qwen3_vl_iterable_dataset.py  vision_iterable_dataset.py
paravt/sft/lmms-engine/src/lmms_engine/models/qwen2_5_vl/: qwen2_5_vl_liger.py
paravt/sft/lmms-engine/src/lmms_engine/parallel/qwen3_moe/: parallelize.py
paravt/sft/lmms-engine/src/lmms_engine/utils/: data_utils.py
patches/: README.md
patches/areal/: 0001-make-swanlab-import-optional.patch  README.md
patches/lmms-engine/: 0001-data-utils-schema-align.patch  0002-qwen3vl-iterable-messages-as-json.patch  0003-vision-iterable-messages-as-json.patch  README.md
patches/lmms-eval/: README.md
requirements/: README.md
scripts/: README.md  inference.py  run_eval.sh  run_rl.sh  run_sft.sh  setup_env.sh
static/css/: paravt-overrides.css  style.css
static/js/: main.js
